# LuminaEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Toolchain-3ds.cmake  Toolchain-macports.cmake  Toolchain-mingw32.cmake  Toolchain-mingw64.cmake  build_macos.sh  init_devkitpro.sh
Android/: fetch-sdl.sh
Android/app/: build.gradle
Android/app/jni/: Application.mk  CMakeLists.txt
Android/app/jni/src/: Android.mk  CMakeLists.txt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/materiaresearch/luminaengine/: LuminaEngine.java
Android/app/src/main/java/org/libsdl/app/: SDLActivity.java
Android/app/src/main/res/values/: strings.xml
assets/: LuminaAtlas.pxo  MapAtlas.pxo  gamestart.lua  luatest.lua  mapatlas.lad  maptest.lmap  scrolltest.lmap  warptest.lmap
docs/: android.md  legacy_builds.md  linux_support.md  rwby.md
libs/: liblua5.4.dylib
libs/lua-5.5.0/: CMakeLists.txt
libs/lua-5.5.0/src/: luac.c  luaconf.h
pbp_assets/: AppIcon.icns  Assets.car  app.rc
src/: lumina.h  main.cpp
src/common/: types.h  utils.cpp  utils.h  vector.h
src/entities/: TileMap.cpp  TileMap.h  character.cpp  character.h  entity.cpp  entity.h  entity_test.cpp  interactable.h  npc.cpp  npc.h  trigger.cpp  trigger.h  warppoint.cpp  warppoint.h
src/formats/: lmap.cpp  lmap.h  lsav.cpp  lsav.h
src/formats/ltl/: ltl.h  parser.cpp
src/game/: IControllable.h  characterstate.h  controller.cpp  controller.h  controller_3ds.cpp  controller_pc.cpp  controller_psp.cpp  gameplay.cpp  gameplay.h  gameplay_menu.cpp  gameplay_state.cpp  gameplay_state.h  gameplay_world.cpp  variables.h
src/graphics/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TextureOptimization.cpp  TextureOptimization.h  TileMap.cpp  TileMap.h
src/graphics/effects/: fade.cpp  fade.h
src/graphics/sprites/: charactersprite.cpp  charactersprite.h  sprite.cpp  sprite.h
src/platform/: keys.h  os_path.h  platform.h  ps2.h  sdl2_noops.h  universalsdl.h
src/platform/mobile/: mdisplay.cpp  mdisplay.h
src/platform/sdl2_compat/: SDL_Renderer.h  SDL_Texture.h  SDL_Window.h  SDL_events.h  SDL_misc.h
src/scripting/: ll_dialogue.cpp  ll_textures.cpp  luminalibrary.cpp  luminalibrary.h  scriptengine.cpp  scriptengine.h
src/sound/: soundsystem.cpp  soundsystem.h
src/vgui/: UIElement.cpp  UIElement.h  button.cpp  button.h  dialogue.cpp  dialogue.h  imagebox.h  lftl.cpp  lftl.h  menu.cpp  menu.h  messagebox.cpp  messagebox.h  panel.cpp  panel.h  question.cpp  question.h  text.cpp  text.h
src/vgui/overlays/: dialogue.cpp  dialogue.h  messagebox.cpp  messagebox.h  overlay.cpp  overlay.h  question.cpp  question.h
src_rwby/weiss_test/: CMakeLists.txt  main.cpp
src_rwby/yang_test/: CMakeLists.txt  main.cpp
src_tools/lftl_test/: CMakeLists.txt  main.cpp
src_tools/lmap_compile/: CMakeLists.txt  collision_convert.cpp  collision_convert.h  conversion.cpp  conversion.h  global.h  main.cpp  parsing.cpp  parsing.h
src_tools/lmap_info/: CMakeLists.txt  main.cpp
src_tools/lua_test/: CMakeLists.txt  luminalibrary.cpp  luminalibrary.h  main.cpp  test.lua
